--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -216,3 +216,142 @@ Voici les cinq points dont Wallis discute (la traduction est de moi).
 
 ]
 
+---
+class: center, inverse, middle
+
+# Les mathématiques
+
+### Le biais du survivant
+
+---
+
+### Le biais du survivant
+
+- Une forme de biais de sélection consistant à surévaluer les chances de succès d'une initiative en concentrant l'attention sur les sujets ayant réussi mais qui sont des exceptions statistiques (des « survivants ») plutôt que des cas représentatifs.
+
+- En finance, le biais du survivant survient lors de l'exclusion des entreprises ayant fait faillite des études de performance.
+
+- Une étude réalisée en 1987 montre que les chats qui chutent d'une hauteur équivalente à moins de six étages et qui survivent ont des blessures plus graves que les chats tombant d'une hauteur plus élevée.
+
+- En production industrielle, on entend souvent « les produits étaient mieux fabriqués avant ».
+
+- En architecture et en construction, les bâtiments de plus de 100 ans encore debout.
+
+- Dans les carrières hypercompétitives, commes les athlètes d'élite.
+
+???
+
+La situation pourrait cependant s'expliquer par un biais du survivant. Il est beaucoup moins probable que les chats qui meurent à la suite d'une chute soient emmenés chez le vétérinaire par rapport aux chats blessés par une chute. Les chats morts à la suite d'une chute de plus de six étages sont donc retirés des statistiques, ne laissant la place qu'aux chats « survivants ».
+
+WO Whitney et CJ Mehlhaff, *Journal of the American Veterinary Medical Association* **191**, 1 399-1 403, 1987
+
+---
+
+## Concernant Abraham Wald
+
+> *The military was inclined to provide protection for those parts that on returning planes showed the most hits. Wald assumed, on good evidence, that hits in combat were uniformly distributed over the planes. It follows that hits on the more vulnerable parts were less likely to be found on returning planes than hits on the less vulnerable parts, since planes receiving hits on the more vulnerable parts were less likely to return to provide data. From these premises, he devised methods for estimating vulnerability of various parts.*
+
+---
+
+background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/9/98/Survivorship-bias.png/1024px-Survivorship-bias.png)
+background-size: cover
+
+---
+class: center, inverse, middle
+
+# Les mathématiques
+
+### La vulnérabilité des avions
+
+---
+
+### Quelques notations
+
+$N$ : le nombre d'avions au total.
+
+$N_i$ : le nombre d'avions au total touchés $i$ fois.
+
+$S$ : le nombre d'avions survivants.
+
+$S_i$ : le nombre d'avions survivants touchés $i$ fois.
+
+$D$ : le nombre d'avions disparus.
+
+$D_i$ : le nombre d'avions disparus touchés $i$ fois.
+
+$P_i$ : la probabilité qu'un avion soit abattu par $i$ coups au but.
+
+$Q_i=1-P_i$ : la probabilité de l'événement contraire.
+
+$p_i$ : la probabilité conditionnelle qu'un avion soit abattu par le $i$ème coup au but, étant donné que les premiers $i-1$ coups ne l'ont pas abattu.
+
+$q_i=1-p_i$ : la probabilité de l'événement contraire.
+
+---
+
+### Quelques résultats « évidents »
+
+--
+
+- Le nombre total d'avions envoyés au combat est égal à la somme des avions survivants et des avions disparus, c'est-à-dire que $N = S+D$. Nous utiliserons habituellement $D = N - S$.
+
+--
+
+- De façon similaire, en étudiant les avions touchés au but $i$ fois, nous avons $N_i = S_i+D_i$.
+
+--
+
+- La probabilité qu'un avion ne soit pas abattu par $i$ coups au but est en fait la probabilité de ne pas être abattu par 1 coup (en ayant survécu aux coups précédents) et de ne pas être abattu par 2 coups (en ayant survécu aux coups précédents), ... et de ne pas être abattu par $i$ coups (en ayant survécu aux coups précédents). Nous avons donc $Q_i = q_1 q_2 \ldots q_i$.
+
+--
+
+- La probabilité d'être abattu par $i$ coups au but est donc $P_i = 1-Q_i = 1 - q_1 q_2 \ldots q_i$.
+
+---
+
+### Les hypothèses
+
+- Nous connaissons $N$.
+
+- Nous connaissons pour tout $i$ ( $i=0,1,2,\ldots$ ) les nombres $S_i$.
+
+- Nous supposons que tous les avions disparus le sont en raison de tirs ennemis et donc $D_0=0$. Ceci implique que nous supposons qu'aucun avion ne peut être porté disparu en raison de problèmes mécaniques.
+
+- Le nombre de tirs sur un avion est borné, c'est-à-dire que $D_j=0$ pour $j$ plus grand qu'un certain entier $m$.
+
+- Pour simplifier la notation, nous écrirons $N_{j\geq i}$ pour signifier $\sum\limits_{j\geq i}N_j$.
+
+---
+
+Rappelons que $p_i$ représente la probabilité conditionnelle qu'un avion soit abattu par le $i$ème coup au but, étant donné que les premiers $i-1$ coups ne l'ont pas abattu. Nous pouvons donc écrire $p_i=\frac{D_i}{N_{j\geq i}}$. 
+
+Nous avons donc:
+
+$$\begin{eqnarray*} 
+D_i &=& p_i \left( N_{j\geq i} \right) \\
+&=& p_i \left( N - N_{j< i} \right) \\
+&=& p_i \left( N - S_{j< i} - D_{j< i} \right)
+\end{eqnarray*}$$
+
+L'idée géniale de Wald est de se rendre compte que nous pouvons résoudre l'équation précédente par induction sur $i$ car nous savons que $D_0=0$. Ainsi:
+
+$$\begin{eqnarray*} 
+D_0 &=& 0 \\
+D_1 &=& p_1 \left( N - S_{j< 1} - D_{j< 1} \right) \\
+&=& p_1 \left( N - S_{0} \right) \\
+D_2 &=& p_2 \left( N - S_{j< 2} - D_{j< 2} \right) \\
+&=& p_2 \left( N - S_0 - S_1 - D_1 \right) \\
+& \ldots &
+\end{eqnarray*}$$
+
+---
+
+### Comment trouver les $p_i$?
+
+L'équation précédente nous ramène maintenant à la question de trouver les valeurs des $p_i$. 
+
+En vérité, il n'est pas possible de les trouver, mais Wald parvient à trouver divers estimés.
+
+Pour ce faire, il utilise l'équation suivante:
+
+$$ \sum_{j=1}^m \frac{S_j}{q_1q_2 \ldots q_j} = N-S_0$$
