--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Abraham Wald et les trous de balles manquants."
-subtitle: "(encore une présentation sur la Seconde Guerre Mondiale...)"
+subtitle: "encore une présentation sur la Seconde Guerre Mondiale..."
 author: "Marc-André Désautels"
 date: "`r Sys.Date()`"
 output:
@@ -18,7 +18,7 @@ options(htmltools.dir.version = FALSE)
 
 class: inverse, middle
 
-## This story, like many World War II stories, start with the Nazis hounding a Jew out of Europe and ends with the Nazis regretting it.
+## *This story, like many World War II stories, start with the Nazis hounding a Jew out of Europe and ends with the Nazis regretting it.*
 
 ### Jordan Ellenberg
 
@@ -45,7 +45,7 @@ class: inverse, center, middle
 
 - En 1927, il entre à l'université de Vienne (Autriche) où il reçoit un doctorat en mathématiques en 1931, sous la direction de Karl Menger
 
-- À la fin de ses études, l'Autriche est en grande difficulté économique et il ne parvient pas à se trouver un emploi
+- À la fin de ses études, en raison de la discrimination de l'Autriche face aux Juifs, il ne parvient pas à se trouver un emploi
 
 ]
 .pull-right[
@@ -62,15 +62,23 @@ class: inverse, center, middle
 
 # Abraham Wald
 
-- Il se fait offrir un emploi par Oskar Morgenstern (celui-ci émigre aux États-Unis et aide à inventer la thérie des jeux)
+- Il se fait offrir un emploi en économie par Oskar Morgenstern (celui-ci émigre plus tard aux États-Unis et aide à inventer la thérie des jeux)
 
-- Avec son expérience, il reçoit une bourse pour travailler pour la *Cowles Commision* un institut économique au Colorado
+- Malgré la situation politique qui se dégrade en Autriche, Wald hésite à émigrer
 
-- Malgré la situation politique qui se dégrade, Wald hésite
+- Mais les Nazis envahissent l'Autriche en 1938 et Wald part aux États-Unis avec sa famille
 
-- Mais les Nazis envahissent l'Autriche et il se fait finalement offrir un emploi de professeur de statistiques à l'université Columbia, à New-York
+- Grâce à son expérience en économie, il reçoit une bourse pour travailler pour la *Cowles Commision for Research in Economics* un institut basé au Colorado
 
-- C'est à partir de ce moment qu'il commence à participer à l'effort de guerre...
+- Il se fait finalement offrir un emploi de professeur de statistiques à l'université Columbia, à New-York
+
+--
+
+### C'est à partir de ce moment qu'il commence à participer à l'effort de guerre...
+
+???
+
+Despite Wald's brilliance, he could not obtain a university position, because of Austrian discrimination against Jews. However, Oskar Morgenstern created a position for Wald in economics. When the Nazis invaded Austria in 1938, the discrimination against Jews intensified. In particular, Wald and his family were persecuted as Jews. Wald was able to emigrate to the United States, at the invitation of the Cowles Commission for Research in Economics, to work on econometrics research
 
 ---
 layout: false
