--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -91,138 +91,29 @@ class: center, inverse, middle
 
 ### Le *Statistical Research Group* (SRG)
 
-.pull-left[
+- Le SRG était basé à l'université Columbia et supporté par le *Applied Mathematics Panel* (AMP) du *National Defense Research Committee* (NDRC), qui faisait partie du *Office of Scientific Research and Development* (OSRD)
 
-- Toutes les informations présentées proviennent d'un article de W. Allen Wallis, *The Statistical Research Group, 1942-1945*, publié en Juin 1980 dans le *Journal of the American Statistical Association*.
+- Le SRG était un programme secret formé de statisticiens, un peu comme le projet Manhattan mais fabriquant des équations plutôt que des bombes
 
-- Dans l'article, Wallis se remémore avec nostalgie ses années au sein du SRG.
+- *[...] when we made recommendations, frequently things happened.* W. Allen Wallis
 
-- W. Allen Wallis, [*The Statistical Research Group, 1942-1945*](https://www.jstor.org/stable/2287451), Journal of the American Statistical Association **75**, 320-330, 1980.
+- *Fighter planes entered combat with their machine guns loaded according to Jack Wolfowitz's recommendations about mixing types of ammunition, and maybe the pilots came back or maybe they didn't.*
 
-]
-
-.pull-right[
-
-.center[![Journal of the American Statistical Association](http://explore.tandfonline.com/uploads/images/journals/covers/UASA.jpg)]
-
-]
+- *Navy planes launched rockets whose propellants had been accepted by Abe Girshick's sampling-inspection plans, and maybe the rockets exploded and destroyed our own planes and pilots or maybe they destroyed the targe*
 
 ---
 
-### The Statistical Research Group, 1942-1945
+### Le *Statistical Research Group* (SRG)
 
-- L'article de Wallis est très bien écrit, avec énormément de panache.
+- *SRG was composed of what surely must be the most extraordinary group of statisticians ever organized, taking into account both number and quality.* W. Allen Wallis
 
-- Il est de plus truffé de citations savoureuses qui rendent la lecture de l'article passionnante.
+- **Wilson Allen Wallis** (5 novembre 1912 - 12 octobre 1998), directeur du SRG, économiste et statisticien. Il a développé le test Kruskal-Wallis avec William Kruskal
 
-> *Exploring the history of one's professional field is often a mark of maturity. Reminiscing about it is usually a mark of senility.*
+- **Milton Friedman** (31 juillet 1912 - 16 novembre 2006), économiste. Prix Nobel d'économie en 1976 pour ses travaux sur l'analyse de la consommation, l'histoire monétaire et la démonstration de la complexité des politiques de stabilisation
 
-> *We pinched pennies... One principal staff menber still alleges resentfully that the adminstrative assistant told him to economize by writing equations on both sides of the paper.*
+- **George Stigler** (17 janvier 1911 - 1er décembre 1991), économiste. Prix Nobel d'économie en 1982 pour ses études fondatrices des structures industrielles, du fonctionnement des marchés, et des causes et effets de la régulation publique
 
-> *In 1950 I was 30 years closer to the events than I am now, and, furthermore, I had the use of a 37 year old's memory--something that now I can scarcely recall ever having had.*
-
-> *If the SRG merits more than a footnote in the history of American Statistics, I suppose it is for one of the 31 reasons that can be composed by using one or more of five points, which I shall list and the discuss.*
-
-???
-
-Nous voulons trouver toutes les combinaisons possibles de 5 éléments, en enlevant le cas où nous ne choisissons aucun élément. Nous savons que 2^5-2=32-1=31.
-
----
-
-### The Statistical Research Group, 1942-1945
-
-Voici les cinq points dont Wallis discute (la traduction est de moi).
-
-1. Le SRG était composé de ce qui est sûrement le plus extraordinaire groupe de statisticiens jamais regroupé, en tenant compte de leur nombre et de leur qualité.
-
-1. L'analyse séquentielle, une des idée statistique les plus puissante et fondatrice du tiers du siècle dernier, a été développée au SRG. Sa théorie et ses méthodes d'application ont été développées ici.
-
-1. Une variété de matériels utiles produits au SRG, à la fois théoriques et pratiques, bien que non comparable avec l'analyse séquentielle, font maintenant tout de même partie des statistiques.
-
-1. L'expérience d'avoir participé au SRG a définitivement contribué aux carrières subséquentes de nombre de personnes qui ont été des leaders en statistiques au cours des 3 décénnies suivantes.
-
-1. SRG a été en de nombreux points un modèle qui n'a jamais été égalé en tant que groupe de consultation statistique efficace.
-
----
-
-## W. Allen Allis
-
-.pull-left[
-
-- **Wilson Allen Wallis** (5 novembre 1912 - 12 octobre 1998)
-
-- Directeur du SRG
-
-- Économiste et statisticien
-
-- Il a développé le test Kruskal-Wallis avec William Kruskal
-
-]
-
-.pull-right[
-
-![W. Allen Wallis](https://upload.wikimedia.org/wikipedia/commons/thumb/f/f5/WAllenWallis1970.jpg/442px-WAllenWallis1970.jpg)
-
-]
-
----
-
-## Milton Friedman
-
-.pull-left[
-
-- Milton Friedman (31 juillet 1912 - 16 novembre 2006)
-
-- Économiste
-
-- Prix Nobel d'économie en 1976 pour ses travaux sur l'analyse de la consommation, l'histoire monétaire et la démonstration de la complexité des politiques de stabilisation
-
-]
-
-.pull-right[
-
-![Milton Friedman](https://upload.wikimedia.org/wikipedia/commons/thumb/2/20/Portrait_of_Milton_Friedman.jpg/385px-Portrait_of_Milton_Friedman.jpg)
-]
-
----
-
-## George Stigler
-
-.pull-left[
-
-- George Stigler (17 janvier 1911 - 1er décembre 1991)
-
-- Économiste
-
-- Prix Nobel d'économie en 1982 pour ses études fondatrices des structures industrielles, du fonctionnement des marchés, et des causes et effets de la régulation publique
-
-]
-
-.pull-right[
-
-.center[![George Stigler](https://upload.wikimedia.org/wikipedia/en/c/c7/George_Stigler.jpg)]
-
-]
-
----
-
-## Abraham Wald
-
-.pull-left[
-
-- Abraham Wald (31 octobre 1902 - 13 décembre 1950)
-
-- Mathématicien
-
-- Fondateur du domaine de l'analyse séquentielle statistique
-
-]
-
-.pull-right[
-
-![Abraham Wald](https://upload.wikimedia.org/wikipedia/commons/8/85/Abraham_Wald.jpg)
-
-]
+- et j'en passe...
 
 ---
 class: center, inverse, middle
