--- a/rmarkdown/challenger.Rmd
+++ b/rmarkdown/challenger.Rmd
@@ -70,9 +70,8 @@ challenger %>%
 
 ```{r}
 nasa %>% 
-  filter(DamageIndex > 0) %>% 
   ggplot(aes(x = Celsius, y = ErosionOrBlowBy)) +
-  geom_point() +
+  geom_jitter(width=0,height=0.1) +
   scale_x_continuous(name = "Température", limits = c(0,30), breaks = seq(0,30,5))  +
   scale_y_discrete(name = "Nombre d'incidents", limits = seq(0,3,1))
 ```
