--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -13,6 +13,7 @@ output:
 ---
 
 ```{r setup, include=FALSE}
+knitr::opts_chunk$set(fig.retina = 3, warning = FALSE, message = FALSE)
 options(htmltools.dir.version = FALSE)
 
 library(tidyverse)
@@ -143,27 +144,38 @@ class: center, inverse, middle
 
 # Les mathématiques
 
+---
+class: center middle
+
+## Le biais du survivant
+
 --
 
-### Le biais du survivant
+### Une forme de biais de sélection consistant à surévaluer les chances de succès d'une initiative en concentrant l'attention sur les sujets ayant réussi mais qui sont des exceptions statistiques (des « survivants ») plutôt que des cas représentatifs.
 
 ---
 
-### Le biais du survivant
+### Quelques exemples
 
 --
 
-- Une forme de biais de sélection consistant à surévaluer les chances de succès d'une initiative en concentrant l'attention sur les sujets ayant réussi mais qui sont des exceptions statistiques (des « survivants ») plutôt que des cas représentatifs.
-
 - En finance, le biais du survivant survient lors de l'exclusion des entreprises ayant fait faillite des études de performance.
 
-- Une étude réalisée en 1987 montre que les chats qui chutent d'une hauteur équivalente à moins de six étages et qui survivent ont des blessures plus graves que les chats tombant d'une hauteur plus élevée.
+--
 
 - En production industrielle, on entend souvent « les produits étaient mieux fabriqués avant ».
 
+--
+
 - En architecture et en construction, les bâtiments de plus de 100 ans encore debout.
 
+--
+
 - Dans les carrières hypercompétitives, commes les athlètes d'élite.
+
+--
+
+- Une étude réalisée en 1987 montre que les chats qui chutent d'une hauteur équivalente à moins de six étages et qui survivent ont des blessures plus graves que les chats tombant d'une hauteur plus élevée.
 
 ???
 
@@ -179,7 +191,7 @@ class: inverse, center, middle
 
 ---
 
-background-image: url(https://img2.thejournal.ie/inline/2573246/original/?width=630&version=2573246)
+background-image: url(https://natgeo.imgix.net/factsheets/thumbnails/ChallengerDisaster.jpg?auto=compress,format&w=1024&h=560&fit=crop)
 background-size: cover
 
 ---
@@ -193,23 +205,40 @@ STS-51-L crew: (front row) Michael J. Smith, Dick Scobee, Ronald McNair; (back r
 
 ---
 
+background-image: url(https://img2.thejournal.ie/inline/2573246/original/?width=630&version=2573246)
+background-size: cover
+
+---
+
 # Challenger
+
+--
 
 - Le désastre de la navette Challenger s'est déroulé le 28 janvier 1986.
 
+--
+
 - La navette se brisa et se désintégra après 73 secondes de vol.
+
+--
 
 - L'accident choqua énormément la société américaine, en partie en raison de la présence de Christa McAuliffe, qui aurait été la première astronaute-enseignante.
 
+--
+
 - Une des conséquences de cet accident est la mise sur pied de la *Rogers Commission* (formé par Neil A. Armstrong et le prix Nobel Richard P. Feynman, entre autre).
 
-- Cette commission que la désintégration est causée par l'échec d'un joint d'étanchéité en raison des températures inhabituellements froides.
+--
+
+- Cette commission conclut que la désintégration est causée par l'échec d'un joint d'étanchéité en raison des températures inhabituellements froides.
+
+--
 
 ### Le problème des joints d'étanchéité était connu!
 
 ---
 
-### Les joints d'étanchéité
+### Les données concernant les joints d'étanchéité
 
 ```{r nasa, echo=FALSE, tidy=FALSE}
 nasa <- tibble(
@@ -251,46 +280,95 @@ nasa <- nasa %>%
   mutate(
     ErosionOrBlowby = if_else(Erosion >= Blowby, Erosion, Blowby),
     Incident = if_else(DamageIndex > 0, 1, 0),
-    Celsius = (Temperature-32)*5/9
+    Celsius = (Temperature-32)*5/9,
+    NumberJoints = 6
   )
 ```
 
+La nuit avant le décollage, une téléconférence a eue lieu entre les ingénieurs, les directeurs de la NASA, pour discuter des effets des basses températures sur le décollage et les joints d'étanchéité.
 
-La nuit avant le décollage, une téléconférence a eue lieu entre les ingénieurs, les directeurs de la NASA, pour discuter des effets des basses températures sur le décollage et les joints d'étanchéité. La conclusion a été fortement influencée par la figure ci-dessous.
+--
 
 > *Temperature data [are] not conclusive on predicting primary O-ring blowby.*
 
+--
+
 ```{r, echo = FALSE, fig.align='center', fig.height = 5}
 nasa %>% 
-  filter(DamageIndex > 0) %>% 
+  filter(!is.na(DamageIndex) & DamageIndex > 0) %>% 
   ggplot(aes(x = Celsius, y = ErosionOrBlowby)) +
-  geom_point() +
-  scale_x_continuous(name = "Température", limits = c(0,30), breaks = seq(0,30,5))  +
-  scale_y_discrete(name = "Nombre d'incidents", limits = seq(0,3,1))
+  geom_jitter(width = 0, height = 0.1) +
+  scale_x_continuous(name = "Température en degrés Celsius", limits = c(-5,30), breaks = seq(-5,30,5))  +
+  scale_y_continuous(name = "Nombre d'incidents", limits = c(-0.5,2.5), breaks = seq(0,2,1))
+```
+
+???
+
+La conclusion a été fortement influencée par la figure ci-dessous.
+
+---
+
+### Les joints d'étanchéité
+
+--
+
+La commission Rogers trouva une grave erreur dans la figure précédente, **les vols sans aucuns incidents avaient été exclus** du graphique car *on croyait* que **ces vols ne contribuaient aucune information sur l'effet de la température**.
+
+--
+
+> *A careful analysis of the flight history of O-ring performance would have revealed the correlation of O-ring damage in low temperature*
+
+--
+
+```{r, echo = FALSE, fig.align='center', fig.height = 5}
+nasa %>% 
+  filter(!is.na(DamageIndex) & DamageIndex >= 0) %>% 
+  ggplot(aes(x = Celsius, y = ErosionOrBlowby)) +
+  geom_jitter(width = 0, height = 0.1) +
+  scale_x_continuous(name = "Température en degrés Celsius", limits = c(-5,30), breaks = seq(-5,30,5))  +
+  scale_y_continuous(name = "Nombre d'incidents", limits = c(-0.5,2.5), breaks = seq(0,2,1))
 ```
 
 ---
 
 ### Les joints d'étanchéité
 
-La commissions Rogers trouva une grave erreur dans la figure précédente, **les vols sans aucuns incidents avaient été exclus** du graphique car *on croyait* que **ces vols ne contribuaient aucune information sur l'effet de la température**.
-
-> *A careful analysis of the flight history of O-ring performance would have revealed the correlation of O-ring damage in low temperature*
-
-```{r, echo = FALSE, fig.align='center', fig.height = 5}
-nasa %>% 
+```{r, echo = FALSE, fig.align='center', fig.height = 7, fig.width = 9}
+challenger <- nasa %>% 
+  filter(!is.na(DamageIndex) & DamageIndex >= 0) %>% 
   ggplot(aes(x = Celsius, y = ErosionOrBlowby)) +
-  geom_jitter(width = 0, height = 0.1) +
-  scale_x_continuous(name = "Température", limits = c(0,30), breaks = seq(0,30,5))  +
-  scale_y_discrete(name = "Nombre d'incidents", limits = seq(0,3,1))
+  geom_point() +
+  scale_x_continuous(name = "Température en degrés Celsius", limits = c(-5,30), breaks = seq(-5,30,5))  +
+  scale_y_continuous(name = "Nombre d'incidents", limits = c(0,6), breaks = seq(0,6,1))
+challenger.glm <- glm(ErosionOrBlowby/NumberJoints ~ Celsius, data=nasa, family=binomial, weights = NumberJoints)
+alpha <- coef(challenger.glm)[1]
+beta <- coef(challenger.glm)[2]
+incidents <- function(x) 6/(1+exp(-alpha-beta*x))
+challenger
 ```
 
 ---
 
-# Challenger
+### Les joints d'étanchéité
 
+```{r, echo = FALSE, fig.align='center', fig.height = 7, fig.width = 9}
+challenger +
+  geom_vline(xintercept = (26-32)*5/9, color = "red", size = 1) +
+  geom_vline(xintercept = (29-32)*5/9, color = "red", size = 1) +
+  geom_text(x = 1, y = 0, label = "Challenger", color = "red")
+```
 
+---
 
+### Les joints d'étanchéité
+
+```{r, echo = FALSE, fig.align='center', fig.height = 7, fig.width = 9}
+challenger +
+  geom_vline(xintercept = (26-32)*5/9, color = "red", size = 1) +
+  geom_vline(xintercept = (29-32)*5/9, color = "red", size = 1) +
+  geom_text(x = 1, y = 0, label = "Challenger", color = "red") +
+  stat_function(fun = incidents, colour = "blue")
+```
 
 ---
 
@@ -303,7 +381,7 @@ nasa %>%
 class: middle
 
 .center[
-<img src="https://i.gifer.com/36jI.gif" width=80%>
+<img src="https://i.gifer.com/36jI.gif" width=90%>
 ]
 
 ---
@@ -311,7 +389,7 @@ class: middle
 class: middle
 
 .center[
-<img src="https://media.giphy.com/media/lVzju3EudcLS0/giphy.gif" width=80%>
+<img src="https://media.giphy.com/media/lVzju3EudcLS0/giphy.gif" width=90%>
 ]
 
 ---
