--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -331,7 +331,7 @@ nasa %>%
 
 ---
 
-### Les joints d'étanchéité
+### Une régression logistique
 
 ```{r, echo = FALSE, fig.align='center', fig.height = 7, fig.width = 9}
 challenger <- nasa %>% 
@@ -349,7 +349,7 @@ challenger
 
 ---
 
-### Les joints d'étanchéité
+### Une régression logistique
 
 ```{r, echo = FALSE, fig.align='center', fig.height = 7, fig.width = 9}
 challenger +
@@ -360,7 +360,7 @@ challenger +
 
 ---
 
-### Les joints d'étanchéité
+### Une régression logistique
 
 ```{r, echo = FALSE, fig.align='center', fig.height = 7, fig.width = 9}
 challenger +
@@ -369,6 +369,46 @@ challenger +
   geom_text(x = 1, y = 0, label = "Challenger", color = "red") +
   stat_function(fun = incidents, colour = "blue")
 ```
+
+---
+
+### Les trous de balles manquants
+
+**Question**: Vous ne voulez pas que vos avions soient abattus par des tirs ennemis, vous décidez donc de leur ajouter du blindage. Mais du blindage alourdit vos avions, les rend moins manoeuvrables et ceux-ci utilisent davantage de carburant. 
+
+- Mettre trop de blindage est un problème
+
+- Ne pas mettre assez de blindage est un problème
+
+### Que faire???
+
+---
+
+background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/9/98/Survivorship-bias.png/1024px-Survivorship-bias.png)
+background-size: cover
+
+---
+
+### Les trous de balles manquants
+
+.center[![avion troué](https://res.cloudinary.com/dzawgnnlr/image/upload/q_auto/f_auto/w_auto/bullet-riddled-plane.jpg)]
+
+Les avions revenaient du combat couverts de trous de balles, mais les trous n'étaient pas uniformément distribués sur tout l'avion.
+
+---
+
+### Les trous de balles manquants
+
+Voici quelques données provenant d'avions revenant du théatre des opérations d'Europe.
+
+#### **Question: Quelles sont les parties de l'avion nécessitant la plus grande quantité de blindage?**
+
+|            Section de l'avion           | Nombre de trous par pieds carrés |
+|-----------------------------------------|----------------------------------|
+| Moteur                                  | 1,11                             |
+| Fuselage (partie principale de l'avion) | 1,73                             |
+| Système de carburant                    | 1,55                             |
+| Reste de l'avion                        | 1,8                              |
 
 ---
 
@@ -391,11 +431,6 @@ class: middle
 .center[
 <img src="https://media.giphy.com/media/lVzju3EudcLS0/giphy.gif" width=90%>
 ]
-
----
-
-background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/9/98/Survivorship-bias.png/1024px-Survivorship-bias.png)
-background-size: cover
 
 ---
 class: center, inverse, middle
